--- a/src/sass/components/_track.scss
+++ b/src/sass/components/_track.scss
@@ -35,6 +35,7 @@
       width: 340px;
       font-size: 16.3px;
       margin-top: 13px;
+      text-align: left;
     }
   }
   &__h2 {
